number Button functions for first text spot

--- a/main.css
+++ b/main.css
@@ -16,6 +16,9 @@
   width: 30px;
 }
 
-.button .divide, .multiply, .subtract, .add {
+.button .divide,
+.multiply,
+.subtract, 
+.add {
   background: #83C178;
 }
