--- a/main.css
+++ b/main.css
@@ -8,6 +8,9 @@
   display: inline-block;
   background: #65B356;
   margin-bottom: -12px;
+  color: white;
+  text-align: center;
+  position: absolute;
 }
 
 .button {
@@ -17,9 +20,6 @@
   color: white;
 }
 
-.button .divide,
-.multiply,
-.subtract, 
-.add {
+.multiply, .divide, .add, .subtract {
   background: #83C178;
 }
